potential fix for menu issue on iOS

--- a/www/pgm2/flexstyle.css
+++ b/www/pgm2/flexstyle.css
@@ -64,6 +64,16 @@ select { font-size: 0.85em; margin: 0; -webkit-appearance: menulist; height: 1.3
 	-webkit-overflow-scrolling: touch;
 	scrollbar-width: none;
 }
+#menu > * {
+	-webkit-animation: fixWebkitOverflowScroll 1s;
+}
+
+@-webkit-keyframes fixWebkitOverflowScroll
+{
+	0% {padding-bottom: 1px;}
+	100% {padding-bottom: 0px;}
+}
+  
 #menu table{ width: 100%; }
 #menu div {	padding: 4px 8px 4px 8px; }
 #menuScrollArea { left: 0px; }
